3.2.0 (Unreleased)
------------------

- version.pt: add "No releases" when there are none.


3.1.1 (2016-07-15)
------------------

- removed unnecessary fetching of mirror data during indexing.


3.1.0 (2016-04-22)
------------------

- use readme-renderer like PyPI does.

- if rendering the description causes errors, they are appended at the end.

- When creating the preview snippet for search results on documentation and the
  extracted doc files can't be accessed, then the preview will contain error
  information instead of raising an internal server error. See issue324

- fix issue335: The documentation wasn't linked for projects with
  non-normalized names.

- fix issue324: The project name wasn't correctly normalized when trying to
  access unpacked documentation in some code paths.

- all generated URLs in devpi-web are now normalized and don't go through a
  redirect anymore.

- added some internal infos to view data for use in theme templates. Any view
  data starting with an underscore is internal and may change between releases
  without notice. see issue319


3.0.0 (2016-02-12)
------------------

- dropped support for python2.6

- index.pt, root.pt, style.css: added title and description to
  users and indexes.

- root.pt, style.css: more compact styling of user/index overview using
  flexbox, resulting in three columns at most sizes

- cleanup previously unpacked documentation to remove obsolete files.

- store hash of doczip with the unpacked data to avoid unpacking if the data
  already exists.

- project.pt, version.pt: renamed ``pypi_whitelist`` related things to
  ``mirror_whitelist``.

- require and adapt to devpi-server-3.0.0 which always uses
  normalized project names internally and offers new hooks.
  devpi-web-3.0.0 is incompatible to devpi-server-2.X.

- doc.pt, macros.pt, style.css, docview.js: use scrollbar of documentation
  iframe, so documentation that contains dynamically resizing elements works