@@ -3,6 +3,8 @@
 
 - version.pt: add "No releases" when there are none.
 
+- project.pt: add "Documentation" column with link to documentation per version.
+
 
 3.1.1 (2016-07-15)
 ------------------
